[project]
name = "nasa-space-weather"
version = "0.1.0"
description = "Repo-native space-weather watcher"
requires-python = ">=3.14"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "pylint>=3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nasa_space_weather = ["site_assets/*.css", "site_assets/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint."messages control"]
disable = ["too-few-public-methods"]
